- add GTM - add cookiebot - fix behaviour of SVGs when opening multiple cards - fixed issue where the final message would block all the cards - fixed the issue where the name in the cards would not change - fixed the flickering of the prediction text when closing cards - fixed issue where our "fake cursor" would not be visible on the cookiebanner

--- a/source/styles.scss
+++ b/source/styles.scss
@@ -195,7 +195,7 @@ $font-base: 18px;
   border-radius: 50%;
   background-color: $white;
   pointer-events: none;
-  z-index: 2000;
+  z-index: 2147483631999;
   transform: translate(0, 0);
   transition: transform .2s, width .2s ease-out, height .2s ease-out;
 
